[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Test1_lib"
version = "0.1.0"
description = "A flexible geometry library for calculating areas and more"
authors = [{ name="Kirill", email="vlasov.va2011@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []
requires-python = ">=3.6"

[tool.setuptools.packages]
find = {}